--- a/data/Tiles.ini
+++ b/data/Tiles.ini
@@ -2,10 +2,13 @@
 
 ; The void tile MUST be first in this file
 [void]
+blockMove = 1
 
 [wall1]
 tile = #
 color = yellow
+blockLaser = 1
+blockMove = 1
 
 [floor1]
 tile = .
@@ -17,3 +20,5 @@ color = cyan
 
 [graywall]
 bgColor = lgray
+blockLaser = 1
+blockMove = 1
