--- a/data/Actors.ini
+++ b/data/Actors.ini
@@ -12,15 +12,15 @@ color = yellow
 [slime]
 name = Slime
 tile = o
-color = cyan
+color = lcyan
 spawnPoints = 1
-health = 4
+health = 2
 weapon = monster1
 
 [bigSlime]
 name = Big Slime
 tile = O
-color = blue
+color = cyan
 spawnPoints = 2
 health = 6
 slowness = 2
