Dead actors now draw and more
Dead actors draw as %, and the game now tells you if you don't have a ranged weapon when trying to shoot one. Also fixed a bug where colors would wrap onto the first line, and made TestLevel2 more interesting.

--- a/data/Actors.ini
+++ b/data/Actors.ini
@@ -3,11 +3,11 @@
 ; The dead actor type MUST be first in this file.
 [dead]
 tile = %
-color = red
+color = yellow
 
 [player]
 tile = @
-color = yellow
+color = white
 
 [slime]
 name = Slime
