--- a/data/TestLevel2.ini
+++ b/data/TestLevel2.ini
@@ -9,18 +9,18 @@ spawnPoints = 20
 [map]
 ######################## #  #####
 #@..................  ...............
-#...................  ........
-#...................  ..X.S...........
-#.........S.........  ..X..S.........
+#................... .........
+#.......................X.S...........
+#.........S.............X..S.........
 #..........S........  ..X...........
 #.....XXXXXXX........  ..X.......
 #.....XXXXXXX.......  ..XX.....  ...
 #.....XXXXXXX.......  ..X.SS........
 #.....XXXXXXX.......  ..X.SS.......
 #.....XXXXXXX...........XX.....  .....
-#.....XXXXXXX.......  ..X.S...
+#.....XXXXXXX........ ..X.S...
 #...................  ..X....... ....
-#...................         .....
+#....................        .....
 #...................  .... . .....
 ####################    ##    ....
 
@@ -34,7 +34,7 @@ leave = .
 
 [actorRandom]
 where = X
-actors = slime,bigSlime
+actors = slime,slime,slime,bigSlime
 leave = .
 
 [portal]
@@ -43,7 +43,7 @@ goto = Level2
 leave = .
 
 [tiles]
-# = wall1
-. = floor1,floor2
+# = graywall
+. = floor3,floor3,floor3,floor3,floor3,floor3,floor4,floor5
 
 
