--- a/data/Tiles.ini
+++ b/data/Tiles.ini
@@ -18,7 +18,19 @@ color = green
 tile = .
 color = cyan
 
+[floor3]
+tile = .
+color = gray
+
+[floor4]
+tile = `
+color = gray
+
+[floor5]
+tile = _
+color = gray
+
 [graywall]
-bgColor = lgray
+bgColor = gray
 blockLaser = 1
 blockMove = 1
