Beginnings of portal code

--- a/data/TestLevel2.ini
+++ b/data/TestLevel2.ini
@@ -21,7 +21,7 @@ spawnPoints = 20
 #.....XXXXXXX........ ..X.S...
 #...................  ..X....... ....
 #....................        .....
-#...................  .... . .....
+#P..................  .... . .....
 ####################    ##    ....
 
 [player]
@@ -39,7 +39,7 @@ leave = .
 
 [portal]
 where = P
-goto = Level2
+goto = TestLevel
 leave = .
 
 [tiles]
