Added ranged AI

--- a/data/Actors.ini
+++ b/data/Actors.ini
@@ -35,3 +35,12 @@ spawnPoints = 5
 health = 10
 slowness = 4
 weapon = monster1
+
+[scuttleDrone]
+name = Scuttle Drone
+tile = s
+color = gray
+spawnPoints = 3
+health = 5
+slowness = 2
+weapon = monsterLaser1
