--- a/data/Items.ini
+++ b/data/Items.ini
@@ -24,3 +24,8 @@ damage = 2
 name = SUPER KNIFE
 category = melee
 damage = 100
+
+[monsterLaser1]
+name = MonsterLaser1
+category = ranged
+damage = 1
