--- a/data/TestLevel.ini
+++ b/data/TestLevel.ini
@@ -34,7 +34,7 @@ leave = .
 
 [actorRandom]
 where = X
-actors = slime,bigSlime
+actors = slime,slime,slime,bigSlime,scuttleDrone
 leave = .
 
 [portal]
