--- a/data/Items.ini
+++ b/data/Items.ini
@@ -1,6 +1,6 @@
 ; Items!
 
-; The none item MUST be first in this file.
+; The none item MUST be first i nn this file.
 [none]
 name = None
 category = none
@@ -29,3 +29,23 @@ damage = 100
 name = MonsterLaser1
 category = ranged
 damage = 1
+
+[monsterLaser5]
+name = Laser Eye
+category = ranged
+damage = 5
+
+[monster10]
+name = Vacuum
+category = melee
+damage = 10
+
+[monsterLaser3]
+name = Trooper Blaster
+category = ranged
+damage = 3
+
+[monster25]
+name = Laserblade
+category = melee
+damage = 25
