--- a/data/Actors.ini
+++ b/data/Actors.ini
@@ -27,8 +27,8 @@ health = 6
 slowness = 3
 weapon = monster1
 
-[cyberZombie]
-name = Cyber Zombie
+[cyberSlime]
+name = Cyber Slime
 tile = X
 color = red
 spawnPoints = 5
@@ -44,3 +44,50 @@ spawnPoints = 3
 health = 5
 slowness = 2
 weapon = monsterLaser1
+
+[Skeledroid]
+name = Skeledroid
+tile = S
+color = blue
+spawnPoints = 3
+health = 7 
+slowness = 2
+weapon = monster1
+
+[zombieDroid]
+name = Zombie Droid
+tile = Z
+color = lblue 
+spawnPoints = 4
+health = 3
+slowness = 2 
+weapon = monsterLaser5
+
+[roomba]
+name = Roomba
+tile = R
+color = lred
+spawnPoints = 7 
+health = 10
+slowness = 3 
+weapon = monster10
+
+[hurricaneSoldier]
+name = Hurricane Soldier
+tile = H
+color = green
+spawnPoints = 5
+health = 9
+slowness = 3
+weapon = monsterLaser3
+
+[darthIn]
+name = Darth In
+tile = D
+color = lgreen
+spawnPoints = 15
+health = 20
+slowness = 2
+weapon = monster25
+
+
