Items can be on the floor now
And the player will pick them up when they walk into them

--- a/data/TestLevel.ini
+++ b/data/TestLevel.ini
@@ -13,14 +13,14 @@ spawnPoints = 10
 #...................  ..X..............#
 #...................  ..X..............#
 #...................  ..X..............#
-#...................  ..X..............#
-#...................  ..X.........S....#
+#.....LL............  ..X..............#
+#.....LL............  ..X.........S....#
 #...................  ..X..............#
 #...................  ..X..............#
 #.......................X..............#
 #...................  ..X..............#
 #...................  ..X..............#
-#...................  .................#
+#........K..........  .................#
 #...................  .................#
 ########################################
 
@@ -29,13 +29,25 @@ leave = .
 
 [actor]
 where = S
-actor = cyberZombie
+actor = cyberSlime
 leave = .
 
 [actorRandom]
 where = X
 actors = slime,slime,slime,bigSlime,scuttleDrone
 leave = .
+
+[item]
+where = K
+item = knife100
+leave = .
+
+[itemRandom]
+where = L
+items = laser1,monsterLaser3
+leave = .
+countMin = 1
+countMax = 1
 
 [portal]
 where = P
