--- a/data/TestLevel.ini
+++ b/data/TestLevel.ini
@@ -13,9 +13,9 @@ spawnPoints = 10
 #...................  ..X..............#
 #...................  ..X..............#
 #...................  ..X..............#
-#.....LL............  ..X..............#
-#.....LL............  ..X.........S....#
-#...................  ..X..............#
+#.....LLL...........  ..X..............#
+#.....LLL...........  ..X.........S....#
+#.....LLL...........  ..X..............#
 #...................  ..X..............#
 #.......................X..............#
 #...................  ..X..............#
@@ -39,15 +39,15 @@ leave = .
 
 [item]
 where = K
-item = knife100
+item = thingsaboutrobots1
 leave = .
 
 [itemRandom]
 where = L
-items = laser1,monsterLaser3
+items = laser1,monsterLaser3,knife100
 leave = .
-countMin = 1
-countMax = 1
+countMin = 4
+countMax = 6
 
 [portal]
 where = P
