--- a/data/TestLevel.ini
+++ b/data/TestLevel.ini
@@ -20,7 +20,7 @@ spawnPoints = 10
 #.......................X..............#
 #...................  ..X..............#
 #...................  ..X..............#
-#........K..........  .................#
+#......D.K..........  .................#
 #...................  .................#
 ########################################
 
@@ -40,6 +40,11 @@ leave = .
 [item]
 where = K
 item = thingsaboutrobots1
+leave = .
+
+[item]
+where = D
+item = cybercrime1
 leave = .
 
 [itemRandom]
