--- a/data/TestLevel.ini
+++ b/data/TestLevel.ini
@@ -4,38 +4,43 @@
 
 [info]
 name = Test Level
-spawnPoints = 10
+spawnPoints = 22
 
 [map]
-########################################
-#@..................  .................#
-#...................  ..............P..#
-#...................  ..X..............#
-#...................  ..X..............#
-#...................  ..X..............#
-#.....LLL...........  ..X..............#
-#.....LLL...........  ..X.........S....#
-#.....LLL...........  ..X..............#
-#...................  ..X..............#
-#.......................X..............#
-#...................  ..X..............#
-#...................  ..X..............#
-#......D.K..........  .................#
-#...................  .................#
-########################################
+################################################################
+#@..................#  .............S.....S...#  .............P#
+#...................#  .......................#  .............K#
+#......LLL..........#  .......................#  .....Y.Y......#
+#...................#  .....S.................#  .....Y.Y......#
+#.................X.#  .................S.....#  .....Y.Y......#
+#.................X.#  .......................#  ..............#
+#......LLL........X.#  .......................#  ..............#
+#...................#  .......................#  ..............#
+#...................#  .......................#  ..............#
+#................................................D.............#
+#......LLL........X.#  .......................#  ..............#
+#.................X.#  .......................#  ..............#
+#.................X.#  .......................#  ..............#
+#...................#  .............S.......S.#  ..............#
+################################################################
 
 [player]
 leave = .
 
 [actor]
 where = S
-actor = cyberSlime
+actor = scuttleDrone
 leave = .
 
-[actorRandom]
+[actor]
 where = X
-actors = slime,slime,slime,bigSlime,scuttleDrone
+actors = slime
 leave = .
+
+[actor]
+where = Y
+actors = cyberSlime
+leave = . 
 
 [item]
 where = K
