--- a/data/TestLevel2.ini
+++ b/data/TestLevel2.ini
@@ -4,37 +4,58 @@
 
 [info]
 name = Test Level 2
-spawnPoints = 20
+spawnPoints = 50
 
 [map]
-######################## #  #####
-#@..................  ...............
-#................... .........
-#.......................X.S...........
-#.........S.............X..S.........
-#..........S........  ..X...........
-#.....XXXXXXX........  ..X.......
-#.....XXXXXXX.......  ..XX.....  ...
-#.....XXXXXXX.......  ..X.SS........
-#.....XXXXXXX.......  ..X.SS.......
-#.....XXXXXXX...........XX.....  .....
-#.....XXXXXXX........ ..X.S...
-#...................  ..X....... ....
-#....................        .....
-#P..................  .... . .....
-####################    ##    ....
+################################################################
+#@.............................................................#
+#..............................................................#
+######..########################################################
+######.........................................................#
+######..#################..##################..#################
+######..#################..##################..#################
+#.......X........########.......X....##........#################
+#..############..##################..##..#######################
+#..############..##################..##..#######################
+#..X........##.....###....XX.........##...........XX......######
+#..#######..##.....###..###########..##..###############..######
+#..#######..##########..###########..##..###############..######
+#....#####.......###....#########....##.........XXX...##....####
+#..X.##########..###.X###########.XX.##..#####..##....##....####
+###############..###..#################..#####..################
+#####....X.......###.........######......#####..............####
+#####..########..###..#####..######......#####..####..####..####
+#......####......###..#####..#################..####..####..####
+#..##..####..#######......#....XX........#####..##..X.####....##
+#..##....##..#######......#..######..##..##.....##X...####....##
+#..##....##################..######..##..###.....###############
+#..###########...............##......##..#######################
+#.........####.....XXX.......##..##..##.....XX..............####
+#..#..X...####.....XXX.......##..##..##..#...XX..#########..####
+#..#..X...####...............##..##..##..##############.....####
+#..############################..##..##..##############..#######
+#.............#################..###############.........#######
+###..#######..#################..###############..##############
+###..XX.####..#########...XX.....###############..........######
+###.....####..#########..........###############...XX.....######
+############..##################################################
+#..............................................................#
+#............................................R.................#
+#............................................R.................#
+#..............................................................#
+################################################################
 
 [player]
 leave = .
 
 [actor]
-where = S
-actor = cyberSlime
+where = G
+actor = roomba
 leave = .
 
 [actorRandom]
 where = X
-actors = slime,slime,slime,bigSlime,scuttleDrone
+actors = Skeledroid,Skeledroid,Skeledroid,zombieDroid,zombieDroid,roomba
 leave = .
 
 [portal]
