Revert "Level2.ini"
This reverts commit acd1921b6a733a28dd6db60aea917bc845dfa12c.

--- a/data/TestLevel2.ini
+++ b/data/TestLevel2.ini
@@ -4,58 +4,37 @@
 
 [info]
 name = Test Level 2
-spawnPoints = 50
+spawnPoints = 20
 
 [map]
-################################################################
-#@.............................................................#
-#..............................................................#
-######..########################################################
-######.........................................................#
-######..#################..##################..#################
-######..#################..##################..#################
-#.......X........########.......X....##........#################
-#..############..##################..##..#######################
-#..############..##################..##..#######################
-#..X........##.....###....XX.........##...........XX......######
-#..#######..##.....###..###########..##..###############..######
-#..#######..##########..###########..##..###############..######
-#....#####.......###....#########....##.........XXX...##....####
-#..X.##########..###.X###########.XX.##..#####..##....##....####
-###############..###..#################..#####..################
-#####....X.......###.........######......#####..............####
-#####..########..###..#####..######......#####..####..####..####
-#......####......###..#####..#################..####..####..####
-#..##..####..#######......#....XX........#####..##..X.####....##
-#..##....##..#######......#..######..##..##.....##X...####....##
-#..##....##################..######..##..###.....###############
-#..###########...............##......##..#######################
-#.........####.....XXX.......##..##..##.....XX..............####
-#..#..X...####.....XXX.......##..##..##..#...XX..#########..####
-#..#..X...####...............##..##..##..##############.....####
-#..############################..##..##..##############..#######
-#.............#################..###############.........#######
-###..#######..#################..###############..##############
-###..XX.####..#########...XX.....###############..........######
-###.....####..#########..........###############...XX.....######
-############..##################################################
-#..............................................................#
-#............................................R.................#
-#............................................R.................#
-#..............................................................#
-################################################################
+######################## #  #####
+#@..................  ...............
+#................... .........
+#.......................X.S...........
+#.........S.............X..S.........
+#..........S........  ..X...........
+#.....XXXXXXX........  ..X.......
+#.....XXXXXXX.......  ..XX.....  ...
+#.....XXXXXXX.......  ..X.SS........
+#.....XXXXXXX.......  ..X.SS.......
+#.....XXXXXXX...........XX.....  .....
+#.....XXXXXXX........ ..X.S...
+#...................  ..X....... ....
+#....................        .....
+#P..................  .... . .....
+####################    ##    ....
 
 [player]
 leave = .
 
 [actor]
-where = G
-actor = roomba
+where = S
+actor = cyberSlime
 leave = .
 
 [actorRandom]
 where = X
-actors = Skeledroid,Skeledroid,Skeledroid,zombieDroid,zombieDroid,roomba
+actors = slime,slime,slime,bigSlime,scuttleDrone
 leave = .
 
 [portal]
