Revert "Update Level1.ini"
This reverts commit db2faa1b0f7051e962ba42f92c5514796799ed64.

--- a/data/TestLevel.ini
+++ b/data/TestLevel.ini
@@ -4,43 +4,38 @@
 
 [info]
 name = Test Level
-spawnPoints = 22
+spawnPoints = 10
 
 [map]
-################################################################
-#@..................#  .............S.....S...#  .............P#
-#...................#  .......................#  .............K#
-#......LLL..........#  .......................#  .....Y.Y......#
-#...................#  .....S.................#  .....Y.Y......#
-#.................X.#  .................S.....#  .....Y.Y......#
-#.................X.#  .......................#  ..............#
-#......LLL........X.#  .......................#  ..............#
-#...................#  .......................#  ..............#
-#...................#  .......................#  ..............#
-#................................................D.............#
-#......LLL........X.#  .......................#  ..............#
-#.................X.#  .......................#  ..............#
-#.................X.#  .......................#  ..............#
-#...................#  .............S.......S.#  ..............#
-################################################################
+########################################
+#@..................  .................#
+#...................  ..............P..#
+#...................  ..X..............#
+#...................  ..X..............#
+#...................  ..X..............#
+#.....LLL...........  ..X..............#
+#.....LLL...........  ..X.........S....#
+#.....LLL...........  ..X..............#
+#...................  ..X..............#
+#.......................X..............#
+#...................  ..X..............#
+#...................  ..X..............#
+#......D.K..........  .................#
+#...................  .................#
+########################################
 
 [player]
 leave = .
 
 [actor]
 where = S
-actor = scuttleDrone
+actor = cyberSlime
 leave = .
 
-[actor]
+[actorRandom]
 where = X
-actors = slime
+actors = slime,slime,slime,bigSlime,scuttleDrone
 leave = .
-
-[actor]
-where = Y
-actors = cyberSlime
-leave = . 
 
 [item]
 where = K
