Fixed map overflow bug

--- a/data/TestLevel.ini
+++ b/data/TestLevel.ini
@@ -9,7 +9,7 @@ spawnPoints = 10
 [map]
 ########################################
 #@..................  .................#
-#...................  ..............P..#
+#.........VVVV......  ..............P..#
 #...................  ..X..............#
 #...................  ..X..............#
 #...................  ..X..............#
@@ -35,6 +35,11 @@ leave = .
 [actorRandom]
 where = X
 actors = slime,slime,slime,bigSlime,scuttleDrone
+leave = .
+
+[actorRandom]
+where = V
+actors = cyberSlime
 leave = .
 
 [item]
