Better actorRandom spawning logic

--- a/data/TestLevel.ini
+++ b/data/TestLevel.ini
@@ -18,10 +18,10 @@ spawnPoints = 10
 #.....LLL...........  ..X..............#
 #...................  ..X..............#
 #.......................X..............#
-#...................  ..X..............#
-#...................  ..X..............#
-#......D.K..........  .................#
-#...................  .................#
+#...................  ..X........B.....#
+#...................  ..X........B.....#
+#......D.K..........  ...........B.....#
+#...................  ...........B.....#
 ########################################
 
 [player]
@@ -36,11 +36,19 @@ leave = .
 where = X
 actors = slime,slime,slime,bigSlime,scuttleDrone
 leave = .
+countMin = 3
+countMax = 5
+
+[actorRandom]
+where = B
+actors = bigSlime
+leave = .
 
 [actorRandom]
 where = V
 actors = cyberSlime
 leave = .
+spawnPoints = 10
 
 [item]
 where = K
