A few TestLevel comments

--- a/data/TestLevel.ini
+++ b/data/TestLevel.ini
@@ -27,11 +27,17 @@ spawnPoints = 10
 [player]
 leave = .
 
+; actor always spawns a single actor, but can have many possible positions
 [actor]
 where = S
 actor = cyberSlime
 leave = .
 
+; will chose an actor randomly from a comma seperated list, and can be weighted by
+; duplicating entries.
+; it will spawn as many as possible within the spawnPoints of the level if countMin or countMax
+; are not defined
+; it can also optionally have its own unique spawnPoints, which it won't share with anything else
 [actorRandom]
 where = X
 actors = slime,slime,slime,bigSlime,scuttleDrone
