--- a/data/Items.ini
+++ b/data/Items.ini
@@ -15,15 +15,40 @@ name = Basic Laser
 category = ranged
 damage = 1
 
+[knife4]
+name = Acidic Knife
+category = melee
+damage = 4
+
+[laser5]
+name = Heat Vision
+category = ranged
+damage = 5
+
+[knife6]
+name = Vibe Blade
+category = melee
+damage = 6
+
+[knife10]
+name = Roomba 
+category = melee
+damage = 10
+
+[laser8]
+name = Blaster but Better
+category = ranged
+damage = 8
+
+[knife100]
+name = Super Knife
+category = melee
+damage = 100
+
 [monster1]
 name = MonsterDebug
 category = melee
 damage = 2
-
-[knife100]
-name = SUPER KNIFE
-category = melee
-damage = 100
 
 [monsterLaser1]
 name = MonsterLaser1
@@ -49,3 +74,19 @@ damage = 3
 name = Laserblade
 category = melee
 damage = 25
+
+[health10]
+name = Minions Bandaid
+category = singleuse
+damage = -10
+
+[health20]
+name = Hello Kitty Bandaid
+category = singleuse
+damage = -20
+
+[health25]
+name = Medkit
+category = singleuse
+damage = -25
+
