--- a/data/Level1.ini
+++ b/data/Level1.ini
@@ -4,20 +4,20 @@
 
 [info]
 name = Test Level
-spawnPoints = 22
+spawnPoints = 100
 
 [map]
-################################################################
-#@..................#  .............S.....S...#  .............P#
-#...................#  .......................#  .............K#
-#......LLL..........#  .......................#  .....Y.Y......#
-#...................#  .....S.................#  .....Y.Y......#
-#.................X.#  .................S.....#  .....Y.Y......#
-#.................X.#  .......................#  ..............#
-#......LLL........X.#  .......................#  ..............#
+############################################################## #
+#@..................#  .............S.....S...#  ............#P#
+#...................#  .......................#  ............#K#
+#......LLL..........#  .......................#  .....Y.Y....#Q#
+#...................#  .....S.................#  .....Y.Y....#.#
+#.................X.#  .................S.....#  .....Y.Y....#.#
+#.................X.#  .......................#  ............#M#
+#......LLL........X.#  .......................#  ............#D#
 #...................#  .......................#  ..............#
 #...................#  .......................#  ..............#
-#................................................D.............#
+#..............................................................#
 #......LLL........X.#  .......................#  ..............#
 #.................X.#  .......................#  ..............#
 #.................X.#  .......................#  ..............#
@@ -32,15 +32,18 @@ where = S
 actor = scuttleDrone
 leave = .
 
-[actor]
+[actorRandom]
 where = X
-actors = slime
+actors = slime, slime, slime, slime, slime, slime, slime, slime, slime, slime, slime, slime
 leave = .
+countMin = 8
+countMax = 12
 
-[actor]
+[actorRandom]
 where = Y
 actors = cyberSlime
 leave = . 
+spawnPoints = 20
 
 [item]
 where = K
@@ -52,16 +55,26 @@ where = D
 item = cybercrime1
 leave = .
 
+[item]
+where = M
+items = health20
+leave = .
+
+[item]
+where = Q
+items = knife6
+leave = .
+
 [itemRandom]
 where = L
-items = laser1,monsterLaser3,knife100
+items = laser1,health10,knife4
 leave = .
 countMin = 4
 countMax = 6
 
 [portal]
 where = P
-goto = TestLevel2
+goto = Level2
 leave = .
 
 [tiles]
