Fixed a typo in Level1

--- a/data/Level1.ini
+++ b/data/Level1.ini
@@ -57,12 +57,12 @@ leave = .
 
 [item]
 where = M
-items = health20
+item = health20
 leave = .
 
 [item]
 where = Q
-items = knife6
+item = knife6
 leave = .
 
 [itemRandom]
