Added a datapad at the end of Level2

--- a/data/Datapads.ini
+++ b/data/Datapads.ini
@@ -28,3 +28,14 @@ jal3 > I just happen to have a download of some interesting info from them.... :
 d > send it. you won't
 `
 jal3 > $$HYPERLINK INVALIDATED$$
+
+[theendofthings]
+--- #####'s Personal Log, Day #### ---
+`
+I'm not sure where to go now, its just a dead end.
+The station's collapsing around me and the walls have started speaking in hisses and clicks.
+I think this might be the end.
+`
+To whoever may read this in the future,
+`
+There is nothing left here but death.
