--- a/data/Level1.ini
+++ b/data/Level1.ini
@@ -3,7 +3,7 @@
 ; To restate with words, [info] must be first, [map] follows info, and [tiles] must be at the end
 
 [info]
-name = Test Level
+name = Level 1
 spawnPoints = 100
 
 [map]
