--- a/data/Level2.ini
+++ b/data/Level2.ini
@@ -3,7 +3,7 @@
 ; To restate with words, [info] must be first, [map] follows info, and [tiles] must be at the end
 
 [info]
-name = Test Level 2
+name =Level 2
 spawnPoints = 50
 
 [map]
@@ -41,7 +41,7 @@ spawnPoints = 50
 ############..##################################################
 #..............................................................#
 #............................................G.................#
-#............................................G.................#
+#............................................G...........E.....#
 #..............................................................#
 ################################################################
 
@@ -56,6 +56,11 @@ leave = .
 [actorRandom]
 where = X
 actors = Skeledroid,Skeledroid,Skeledroid,zombieDroid,zombieDroid,roomba
+leave = .
+
+[item]
+where = E
+item = theendofthings
 leave = .
 
 [portal]
